# noam-secrets-repo

./: Dockefile  Dockerfile  Dockerfile23  Pipfile  Pulumi.yaml  another.js  blah.js  blah.py  circleci  dev-requirements.txt  dfg  docker-compose.yaml  fdf  go.mod  klkl.cs  layer.yaml  many lines  myapi.py  new long file  new.java  package-lock.json  package.json  pnpm-lock.yaml  pom.xml  pyproject.toml  requirements.txt  rrrrrrrrrrr  terr.tf  work.js  yooo
.github/workflows/: cicd.yaml  cicd.yml
blah/: Pipfile  go.sum  pnpm-lock.yaml  pom.xml  pyproject.toml  requirements.txt  setup.py
blah/blah2/: dev-requirements.txt  pyproject.toml  requirements.txt
blah/blah3/: pyproject.toml  setup.py
cloudformation/: template.yaml
folder/: Pipfile  pyproject.toml  requirements.txt  x.js
github/: pyproject.toml
github/workflows/: cicd.yaml  cicd.yml  package.json
hooks/: docker-compose.yaml
manifests/: init.pp
