[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classify"
version = "1.0.0"
description = "LLM-powered classification"
readme = "README.md"
requires-python = ">=3.13.0"
authors = [
    {name = "Rocket Money", email = "engineering@rocketmoney.com"}
]
dependencies = [
    "pydantic==2.11.7",
    "dask==2021.9.1"
]

[project.urls]
Homepage = "https://github.com/rocketmoney/inference-service"
Documentation = "https://github.com/rocketmoney/inference-service/wiki"
Repository = "https://github.com/rocketmoney/inference-service"
"Bug Reports" = "https://github.com/rocketmoney/inference-service/issues"

[project.scripts]
classify = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
src = ["config/*.json", "prompts/*.py", "prompts/*.txt"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

