[tool.poetry]
name = "issue_severity_common_py"
version = "0.1.0"
description = "issue_severity_common_py"
authors = ["aire"]

[tool.poetry.scripts]
lint = "cyera_common_py.lint:lint"
fix = "cyera_common_py.lint:fix"

[tool.poetry.dependencies]
python = ">=3.11.9,<3.12"
cyera_common_py = { path = "../cyera_common_py", develop = true }
cyera_http_microservice_py = { path = "../../../libs/python/cyera_http_microservice_py", develop = true }

[tool.poetry.dev-dependencies]
mypy = "==1.8.0"
black = "^22.6.0"
pylint = "^3.0.0a5"
pylint-pydantic = "^0.3.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--suppress-no-test-exit-code"
