[tool.poetry]
name = "psinv"
version = "0.2"
description = ""
authors = ["Marcin Kostkiewicz <kostkiewicz.m@pg.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.5"
tabulate = "^0.9.0"
databricks-connect = "15.4.3"
quinn = "v0.10.2"
mack = "v0.5.0"
rich = ">=13.9.4"
pandas = {version="^2.2.1", extras=["computation", "performance"]}
fastapi = {version="*", extras=["all"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
etl = "psinv.silver_inventory.etl.etl:main"
publish = "psinv.silver_inventory.etl.publish:main"
migrate = "psinv.packages.utils.common:migrate"
demigrate = "psinv.packages.utils.common:demigrate"

[[tool.poetry.source]]
name = "pg_composite_pipelines"
url = "https://pkgs.dev.azure.com/dh-platforms-devops/app-ps-datapipelines/_packaging/pg_composite_pipelines/pypi/simple/"
priority = "explicit"

[[tool.poetry.source]]
name = "pg_jfrog"
url = "https://png.jfrog.io/artifactory/api/pypi/pgg-python/simple"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "5.0.0"
chispa = "^0.9.4"
isort = "^5.13.2"
black = "^24.3.0"
sqlfluff = "^3.0.5"
pre-commit = "^3.7.1"

[tool.sqlfluff.core]
templater = "placeholder"
dialect = "databricks"
max_line_length = 150

[tool.sqlfluff.layout.type.comma]
line_position = "leading"

[tool.sqlfluff.rules.references.special_chars]
quoted_identifiers_policy = "none"

[tool.sqlfluff.templater.placeholder]
param_style = "dollar"

[tool.isort]
profile = "black"

[tool.black]
line-length = 200
